--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,43 @@
 #
 
 -i https://pypi.org/simple
-absl-py==1.3.0; python_version >= '3.6'
+absl-py==1.3.0
+appnope==0.1.3; platform_system == 'Darwin'
+asttokens==2.2.1
+backcall==0.2.0
+comm==0.1.2; python_version >= '3.6'
+debugpy==1.6.4; python_version >= '3.7'
+decorator==5.1.1; python_version >= '3.5'
+entrypoints==0.4; python_version >= '3.6'
+executing==1.2.0
+ipykernel==6.19.1
+ipython==8.7.0; python_version >= '3.8'
+jedi==0.18.2; python_version >= '3.6'
+jinja2==3.1.2
+jupyter-client==7.4.8; python_version >= '3.7'
+jupyter-core==5.1.0; python_version >= '3.8'
+markupsafe==2.1.1; python_version >= '3.7'
+matplotlib-inline==0.1.6; python_version >= '3.5'
+nest-asyncio==1.5.6; python_version >= '3.5'
 numpy==1.23.5
 ortools==9.5.2237
+packaging==22.0; python_version >= '3.7'
 pandas==1.5.2
-protobuf==4.21.10; python_version >= '3.7'
-python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+parso==0.8.3; python_version >= '3.6'
+pexpect==4.8.0; sys_platform != 'win32'
+pickleshare==0.7.5
+platformdirs==2.6.0; python_version >= '3.7'
+prompt-toolkit==3.0.36; python_full_version >= '3.6.2'
+protobuf==4.21.10
+psutil==5.9.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pygments==2.13.0; python_version >= '3.6'
+python-dateutil==2.8.2
 pytz==2022.6
-six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pyzmq==24.0.1; python_version >= '3.6'
+six==1.16.0
+stack-data==0.6.2
+tornado==6.2; python_version >= '3.7'
+traitlets==5.6.0; python_version >= '3.7'
+wcwidth==0.2.5
