--- a/requirements.txt
+++ b/requirements.txt
@@ -9,13 +9,16 @@
 absl-py==1.3.0
 appnope==0.1.3; platform_system == 'Darwin'
 asttokens==2.2.1
+attrs==22.1.0; python_version >= '3.5'
 backcall==0.2.0
 comm==0.1.2; python_version >= '3.6'
 debugpy==1.6.4; python_version >= '3.7'
 decorator==5.1.1; python_version >= '3.5'
 entrypoints==0.4; python_version >= '3.6'
+exceptiongroup==1.0.4; python_version < '3.11'
 executing==1.2.0
-ipykernel==6.19.1
+iniconfig==1.1.1
+ipykernel==6.19.2
 ipython==8.7.0; python_version >= '3.8'
 jedi==0.18.2; python_version >= '3.6'
 jinja2==3.1.2
@@ -32,17 +35,20 @@ parso==0.8.3; python_version >= '3.6'
 pexpect==4.8.0; sys_platform != 'win32'
 pickleshare==0.7.5
 platformdirs==2.6.0; python_version >= '3.7'
+pluggy==1.0.0; python_version >= '3.6'
 prompt-toolkit==3.0.36; python_full_version >= '3.6.2'
 protobuf==4.21.10
 psutil==5.9.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pygments==2.13.0; python_version >= '3.6'
+pytest==7.2.0
 python-dateutil==2.8.2
 pytz==2022.6
 pyzmq==24.0.1; python_version >= '3.6'
 six==1.16.0
 stack-data==0.6.2
+tomli==2.0.1; python_version < '3.11'
 tornado==6.2; python_version >= '3.7'
-traitlets==5.6.0; python_version >= '3.7'
+traitlets==5.7.0; python_version >= '3.7'
 wcwidth==0.2.5
